--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
     <div id="header">
     <h1>Broadway Design</h1>
       <nav>
-         <ul>
-           <li>Home</li>
-           <li>Process</li>
-           <li>Work</li>
-           <li>Team</li>
-           <li>Team</li>
-         </ul>
+           <p class="pagelink"><a href="#header">Home</a></p>
+           <p class="pagelink"><a href="#process">Process</a></p>
+           <p class="pagelink">Work</p>
+           <p class="pagelink">Team</p>
+           <p class="pagelink">Contact</p>
        </nav>
+     </div>
+     <div id="process">
+       <h2>Our Process</h2>
+       <img src="./resources/images/identify.svg"/>
+       <h3>Identify</h3>
+       <p>We focus on the most important details.</p>
+       <img src="./resources/images/understand.svg"/>
+       <p>We study our projects inside and out.</p>
+       <img src="./resources/images/execute.svg"/>
+       <h3>Execute</h3>
+       <p>We put everything we have into our work.</p>
      </div>
   </body>
 </html>
