--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
        <h3>Execute</h3>
        <p>We put everything we have into our work.</p>
      </div>
+     <div id="backgrounbanner">
+       <h4>Designed in New York</h4>
+     </div>
   </body>
 </html>
