--- a/index.html
+++ b/index.html
@@ -27,8 +27,22 @@
        <h3>Execute</h3>
        <p>We put everything we have into our work.</p>
      </div>
-     <div id="backgrounbanner">
+     <div>
        <h4>Designed in New York</h4>
      </div>
+     <div id="portfolio">
+       <h3>Portfolio</h3>
+       <p>Coming Soon</p>
+    </div>
+    <div id="team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+    <div id="contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555
+      </br>Email: test@example.com
+      </br>Twitter: @test</p>
+    </div> 
   </body>
 </html>
