--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <nav>
            <p class="pagelink"><a href="#header">Home</a></p>
            <p class="pagelink"><a href="#process">Process</a></p>
-           <p class="pagelink">Work</p>
-           <p class="pagelink">Team</p>
-           <p class="pagelink">Contact</p>
+           <p class="pagelink"><a href="#portfolio">Work</a></p>
+           <p class="pagelink"><a href="#team">Team</a></p>
+           <p class="pagelink"><a href="#contact">Contact</a></p>
        </nav>
      </div>
      <div id="process">
@@ -40,9 +40,9 @@
     </div>
     <div id="contact">
       <h3>Contact</h3>
-      <p>Phone: (555)-555-5555
-      </br>Email: test@example.com
-      </br>Twitter: @test</p>
-    </div> 
+      <p>Phone: (555)-555-5555</p>
+      <p>Email: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
   </body>
 </html>
