--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
       <p>Email: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
+    <div id="footer">
+      <nav>
+        <p>© Broadway 2017 Home About Work Team Contact</p>
   </body>
 </html>
