--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </div>
     <div id="footer">
       <nav>
-        <p>© Broadway 2017 Home About Work Team Contact</p>
+        <p>© Broadway 2017 <a href="#header">Home</a> <a href="#process">About</a>
+          <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
   </body>
 </html>
